--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 *{
   box-sizing: border-box;
 }
@@ -7,7 +6,10 @@ body{
 }
 nav{
   background-color: #eee;
- max-width:300px;
+ position: fixed;
+  top:0;
+ max-width:200px;
+  height:100%;
   border-right: 2px solid lightgrey;
 }
 nav a {
@@ -17,6 +19,12 @@ nav a {
 h1{
   text-align: center;
 }
+  #main-doc {
+      position: absolute;
+      margin-left: 210px;
+      padding: 20px;
+      margin-bottom: 110px;
+    }
 #main{  
  font-family: 'Bree Serif', sans-serif;
   padding-left: 10px; 
@@ -25,4 +33,8 @@ h1{
 section{
   padding-left:5px;
 }
-    
+  @media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
